fix(oc): 修复缺陷，改为抓取全SMTH